--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,12 @@ pycodestyle==2.0.0
 pyflakes==1.2.3
 pyinstrument-cext==0.2.4
 PyMySQL==0.10.1
+python-dotenv==0.21.1
 pytz==2019.3
 requests==2.28.1
 sortedcontainers==2.1.0
 tomli==2.0.1
 typing_extensions==4.6.3
 urllib3==1.26.16
+
+Flask~=2.2.5
