--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,21 @@ certifi==2023.5.7
 charset-normalizer==2.1.1
 click==8.1.3
 fastavro==1.7.0
+flake8==5.0.4
+Flask==2.2.5
 idna==3.4
+importlib-metadata==4.2.0
+itsdangerous==2.1.2
 jdcal==1.4.1
-mccabe==0.5.3
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mccabe==0.7.0
 mypy-extensions==1.0.0
 pathspec==0.11.1
 peewee==3.13.1
 platformdirs==3.5.1
-pycodestyle==2.0.0
-pyflakes==1.2.3
+pycodestyle==2.9.1
+pyflakes==2.5.0
 pyinstrument-cext==0.2.4
 PyMySQL==0.10.1
 python-dotenv==0.21.1
@@ -19,7 +25,8 @@ pytz==2019.3
 requests==2.28.1
 sortedcontainers==2.1.0
 tomli==2.0.1
+typed-ast==1.5.4
 typing_extensions==4.6.3
 urllib3==1.26.16
-
-Flask~=2.2.5
+Werkzeug==2.2.3
+zipp==3.15.0
